--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ a.rwd:hover, a.rwd:active {
     height: 130px;
     background: url("images/img/weather_all.png") -150px 0;
 }
-#rainy {
+#10d {
     width: 150px;
     height: 130px;
     background: url("images/img/weather_all.png") 0 -130px;
