--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,7 @@ a.rwd:hover, a.rwd:active {
     text-decoration: none;
 }
 
-#hot {
+#02d {
     width: 150px;
     height: 130px;
     background: url("images/img/weather_all.png") 0 0;
